--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
         "@nestjs/common": "^11.0.1",
         "@nestjs/config": "^4.0.2",
         "@nestjs/core": "^11.0.1",
+        "@nestjs/event-emitter": "^3.0.1",
         "@nestjs/jwt": "^11.0.2",
         "@nestjs/platform-express": "^11.0.1",
+        "@nestjs/schedule": "^6.1.0",
         "@nestjs/swagger": "^11.2.3",
         "@nestjs/typeorm": "^11.0.0",
         "@types/bcrypt": "^6.0.0",
