--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@nestjs/swagger": "^11.2.3",
         "@nestjs/typeorm": "^11.0.0",
         "@types/bcrypt": "^6.0.0",
+        "argon2": "^0.44.0",
         "axios": "^1.13.2",
         "bcrypt": "^6.0.0",
         "dotenv": "^17.2.3",
